# mcp-generator-3.x

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.babelfhir-ref/: fhir-client.ts  generator-index.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pr-to-main.yml  create-release.yml  deploy-docs.yml  inspector-tests.yml  promote-release.yml  publish.yml  test-examples.yml  tests.yml  update-changelog.yml  update-version-metadata.yml
docs/: changelog.md  comparison.md  contributing.md  index.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/guide/: architecture.md  authentication.md  cli.md  configuration.md  middleware.md  testing.md
examples/: README.md
examples/proxy-smart/: openapi.json
mcp_generator/: __init__.py  a2a.py  cli.py  config.py  display_helpers.py  display_renderers.py  generate_client.py  generator.py  introspection.py  models.py  overlay.py  register_mcp.py  renderers.py  run_mcp.py  test_generator.py  utils.py  writers.py
mcp_generator/overlays/: __init__.py  fhir.overlay.yaml
mcp_generator/scripts/: generate_jwt_keypair.py  generate_openapi_client.py  test_with_inspector.py  validate_openapi.py
mcp_generator/templates/: authentication.py  display_tools.py  dockerfile_template.py  event_store.py  fastmcp_template.json  oauth_provider.py  pyproject_template.toml
mcp_generator/templates/test/: test_auth_flows.py  test_behavioral.py  test_cache.py  test_e2e_openapi_features.py  test_oauth_persistence.py  test_resources.py  test_runner.py  test_server_integration.py  test_tool_calls.py  test_tool_schemas.py  test_tools.py  test_transforms.py
scripts/workflows/: categorize_commits.py  update_version_metadata.py
test/: conftest.py  run_tests.py  test_a2a.py  test_bug_fixes.py  test_display_renderers.py  test_display_tools.py  test_generator.py  test_introspection.py  test_models.py  test_overlay.py  test_renderers.py  test_templates.py  test_utils.py
