[project]
name = "mcp-generator"
version = "3.2.4"
description = "OpenAPI to FastAPI MCP Server Generator"
authors = [
    {name = "Maximilian Nussbaumer", email = "max.nussbaumer@maxhealth.tech"}
]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["mcp", "openapi", "fastmcp", "code-generation", "ai", "llm", "agent", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openapi-py-fetch>=0.1",  # Shared runtime + generator for OpenAPI clients
    "pyyaml>=6.0.0",  # For parsing OpenAPI YAML files
    "httpx>=0.28.1",  # For downloading OpenAPI specs from URLs (--url flag)
    # Dependencies needed for introspecting generated OpenAPI client:
    "pydantic>=2.10.3,<3.0.0",  # Generated client uses Pydantic models
    "urllib3>=2.1.0,<3.0.0",  # OpenAPI client dependency
    "python-dateutil>=2.8.2",  # OpenAPI client dependency
    "typing-extensions>=4.7.1",  # Backport for Python 3.11
]
ci = [
    "openai>=1.0.0",  # For AI-powered diff summaries in CI
]

[project.scripts]
generate-mcp = "mcp_generator.cli:main"
register-mcp = "mcp_generator.register_mcp:main"
run-mcp = "mcp_generator.run_mcp:main"

[project.urls]
Homepage = "https://github.com/quotentiroler/mcp-generator-3.x"
Documentation = "https://quotentiroler.github.io/mcp-generator-3.x/"
Repository = "https://github.com/quotentiroler/mcp-generator-3.x"
Issues = "https://github.com/quotentiroler/mcp-generator-3.x/issues"
Changelog = "https://github.com/quotentiroler/mcp-generator-3.x/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_generator"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "fastmcp>=3.2.4",  # For testing generated servers that use FastMCP 3.x features
    "cryptography>=43.0.0",  # For testing storage encryption
]
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "prefab_ui",
    "prefab_ui.*",
    "openapi_client",
    "openapi_client.*",
    "yaml",
    "tomli",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
# Exclude generated code, examples, and templates from test collection
norecursedirs = [
    "scripts",
    "examples",
    "generated_*",
    "templates",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]
markers = [
    "validated_auth: Tests that require JWT token validation (--validate-tokens flag)",
    "require_backend: Tests that require backend API running on port 8445",
    "slow: Performance and load tests that take longer to run",
    "fastmcp31: Tests for FastMCP 3.1 specific features (SearchTools, CodeMode, etc.)",
    "middleware: Tests for middleware generation (ResponseLimiting, Ping, etc.)",
    "transforms: Tests for transform generation (SearchTools, CodeMode)",
    "multiauth: Tests for MultiAuth functionality",
    "otel: Tests for OpenTelemetry integration",
]
# By default, skip validated auth tests unless explicitly requested
# They will auto-skip if backend/MCP server with validation isn't available
addopts = "-m 'not validated_auth'"
